--- a/openstack/bareon/Bareon.spec.j2
+++ b/openstack/bareon/Bareon.spec.j2
@@ -9,7 +9,7 @@ Summary:        OpenStack bareon tool
 License:        {{ license('Apache-2.0') }}
 Group:          Applications/System
 Url:            https://launchpad.net/%{sname}
-Source0:        https://pypi.python.org/packages/1a/f5/62598e6fb3e3ee46f219df291176672579e5fbbd4d44258140191373d2d8/%{sname}-%{sversion}.tar.gz
+Source0:        https://pypi.io/packages/source/b/bareon/%{sname}-%{sversion}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('jsonschema') }}
 BuildRequires:  {{ py2pkg('oslo.serialization') }}
