--- a/openstack/oslo.config/oslo.config.spec.j2
+++ b/openstack/oslo.config/oslo.config.spec.j2
@@ -7,7 +7,7 @@ Summary:       OpenStack common configuration library
 Group:         Development/Languages
 License:       {{ license('Apache-2.0') }}
 Url:           https://launchpad.net/%{sname}
-Source0:       https://pypi.python.org/packages/83/0f/f51e69bee2eb3cd2218ec1d94d1bedfdc26534b743c7d81d4a3ed8ac4c6b/%{sname}-%{version}.tar.gz
+Source0:       https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires: openstack-macros
 BuildRequires: python-devel
 BuildRequires: {{ py2pkg('debtcollector') }}
