--- a/openstack/oslo.db/oslo.db.spec.j2
+++ b/openstack/oslo.db/oslo.db.spec.j2
@@ -7,7 +7,7 @@ Summary:        OpenStack oslo.db library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
-Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('alembic') }}
