--- a/openstack/oslo.serialization/oslo.serialization.spec.j2
+++ b/openstack/oslo.serialization/oslo.serialization.spec.j2
@@ -7,7 +7,7 @@ Summary:       OpenStack serialization library
 Group:         Development/Languages
 License:       {{ license('Apache-2.0') }}
 Url:           https://launchpad.net/%{sname}
-Source0:       https://pypi.python.org/packages/24/a9/17f60c463b663b35e3fe99c7a846a242ec8e336b6e954240c34de5490fc7/%{sname}-%{version}.tar.gz
+Source0:       https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires: openstack-macros
 BuildRequires: {{ py2pkg('devel') }}
 BuildRequires: {{ py2pkg('mock') }}
