--- a/openstack/oslo.service/oslo.service.spec.j2
+++ b/openstack/oslo.service/oslo.service.spec.j2
@@ -6,7 +6,7 @@ Summary:        OpenStack oslo.service library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
-Source0:        https://pypi.python.org/packages/90/4c/c52ea2f34c88594fbe6bfe7b2bf0c287fd953c9058aa93cae41acc66c5a9/%{sname}-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  python-devel
 BuildRequires:  procps
