--- a/openstack/oslo.utils/oslo.utils.spec.j2
+++ b/openstack/oslo.utils/oslo.utils.spec.j2
@@ -7,7 +7,7 @@ Summary:        OpenStack utils library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
-Source0:        https://pypi.python.org/packages/a9/b0/ad68e5cb0b68ffc26c651e4bb622207e9e91b8ba6c8f60dd4cc20d864b54/%{sname}-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Babel') }}
 BuildRequires:  {{ py2pkg('debtcollector') }}
