--- a/openstack/oslotest/oslotest.spec.j2
+++ b/openstack/oslotest/oslotest.spec.j2
@@ -19,7 +19,7 @@ Summary:        OpenStack test framework
 License:        {{ 'Apache-2.0' | license }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/oslotest
-Source:         https://pypi.python.org/packages/source/o/oslotest/oslotest-%{version}.tar.gz
+Source:         https://pypi.io/packages/source/o/oslotest/oslotest-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('pbr') }}
