--- a/openstack/python-keystoneclient/python-keystoneclient.spec.j2
+++ b/openstack/python-keystoneclient/python-keystoneclient.spec.j2
@@ -8,7 +8,7 @@ Summary:       Client library for OpenStack Identity API
 License:       {{ license('Apache-2.0') }}
 Group:         Development/Languages/Python
 Url:           http://launchpad.net/%{sname}
-Source0:       https://pypi.python.org/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
+Source0:       https://pypi.io/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
 
 BuildArch:     noarch
 BuildRequires: openstack-macros
