--- a/openstack/os-client-config/os-client-config.spec.j2
+++ b/openstack/os-client-config/os-client-config.spec.j2
@@ -8,7 +8,7 @@ Summary:        OpenStack Client Configuration Library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Libraries
 Url:            https://launchpad.net/%{sname}
-Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildArch:      noarch
 BuildRequires: openstack-macros
 BuildRequires: python-devel
