--- a/openstack/oslo.context/oslo.context.spec.j2
+++ b/openstack/oslo.context/oslo.context.spec.j2
@@ -7,7 +7,7 @@ Summary:       OpenStack Oslo context library
 Group:         Development/Languages
 License:       {{ license('Apache-2.0') }}
 Url:           https://launchpad.net/%{sname}
-Source0:       https://pypi.python.org/packages/66/4e/f0ac027adf2a24111dad2915c0f7c2e25a939a660d3af6e65036eb7a9f6d/%{sname}-%{version}.tar.gz
+Source0:       https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires: openstack-macros
 BuildRequires: {{ py2pkg('pbr') }}
 %if %{with test}
