Add Epoch to oslo.config
 * oslo.config has epoch in CentOS/RH/Fedora

Change-Id: I5967f132c15757f35c6347916a08834edc0ab50f

--- a/openstack/oslo.config/oslo.config.spec.j2
+++ b/openstack/oslo.config/oslo.config.spec.j2
@@ -2,6 +2,7 @@
 
 Name:          {{ py2name('oslo.config') }}
 Version:       3.10.0
+Epoch:         {{ epoch('oslo.config') }}
 Release:       0
 Summary:       OpenStack common configuration library
 Group:         Development/Languages
