--- a/openstack/oslo.policy/oslo.policy.spec.j2
+++ b/openstack/oslo.policy/oslo.policy.spec.j2
@@ -1,7 +1,7 @@
 %global sname oslo.policy
 
 Name:           {{ py2name('oslo.policy') }}
-Version:        1.8.0
+Version:        1.9.0
 Release:        0
 Summary:        OpenStack Oslo Policy library
 License:        {{ license('Apache-2.0') }}
@@ -61,6 +61,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %license LICENSE
 %doc README.rst
 %{_bindir}/oslopolicy-checker
+%{_bindir}/oslopolicy-sample-generator
 %{python2_sitelib}/oslo_policy
 %{python2_sitelib}/*.egg-info
 
