--- a/openstack/oslo.log/oslo.log.spec.j2
+++ b/openstack/oslo.log/oslo.log.spec.j2
@@ -69,8 +69,8 @@ testr init && testr run --parallel
 %files
 %license LICENSE
 %doc ChangeLog README.rst
-%{python_sitelib}/oslo_log
-%{python_sitelib}/*.egg-info
+%{python2_sitelib}/oslo_log
+%{python2_sitelib}/*.egg-info
 
 %files doc
 %license LICENSE
