--- a/openstack/oslo.serialization/oslo.serialization.spec.j2
+++ b/openstack/oslo.serialization/oslo.serialization.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.serialization
 Name:          {{ py2name('oslo.serialization') }}
-Version:       2.7.0
+Version:       2.10.0
 Release:       0
 Summary:       OpenStack serialization library
 License:       {{ license('Apache-2.0') }}
@@ -9,6 +9,7 @@ Url:           https://launchpad.net/%{sname}
 Source0:       https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires: openstack-macros
 BuildRequires: {{ py2pkg('devel') }}
+BuildRequires: {{ py2pkg('ipaddress') }}
 BuildRequires: {{ py2pkg('mock') }}
 BuildRequires: {{ py2pkg('msgpack-python') }}
 BuildRequires: {{ py2pkg('netaddr') }}
