--- a/openstack/oslo.config/oslo.config.spec.j2
+++ b/openstack/oslo.config/oslo.config.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.config
 Name:           {{ py2name('oslo.config') }}
-Version:        3.10.0
+Version:        3.12.0
 Epoch:          {{ epoch('oslo.config') }}
 Release:        0
 Summary:        OpenStack common configuration library
@@ -18,6 +18,7 @@ BuildRequires:  {{ py2pkg('oslo.i18n') }}
 BuildRequires:  {{ py2pkg('oslotest') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('python-subunit') }}
+BuildRequires:  {{ py2pkg('rfc3986') }}
 BuildRequires:  {{ py2pkg('six') }}
 BuildRequires:  {{ py2pkg('stevedore') }}
 BuildRequires:  {{ py2pkg('testrepository') }}
@@ -25,6 +26,8 @@ BuildRequires:  {{ py2pkg('testscenarios') }}
 BuildRequires:  {{ py2pkg('testtools') }}
 Requires:       {{ py2pkg('debtcollector') }}
 Requires:       {{ py2pkg('netaddr') }}
+Requires:       {{ py2pkg('oslo.i18n') }}
+Requires:       {{ py2pkg('rfc3986') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('stevedore') }}
 BuildArch:      noarch
