--- a/openstack/os-win/os-win.spec.j2
+++ b/openstack/os-win/os-win.spec.j2
@@ -1,7 +1,7 @@
 %global sname os-win
 Name:          {{ py2name('os-win') }}
 Epoch:         {{ epoch('os-win') }}
-Version:       0.3.2
+Version:       1.0.0
 Release:       0
 Summary:       Hyper-V library for OpenStack projects
 License:       {{ license('Apache-2.0') }}
@@ -9,6 +9,7 @@ Group:         Development/Languages/Python
 Url:           https://launchpad.net/%{sname}
 Source0:       https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires: openstack-macros
+BuildRequires: {{ py2pkg('ddt') }}
 BuildRequires: {{ py2pkg('devel') }}
 BuildRequires: {{ py2pkg('eventlet') }}
 BuildRequires: {{ py2pkg('mock') }}
