Use Source0 tag in all spec files
Concerned packages:
- os-testr
- oslosphinx
- oslotest

Change-Id: If4f4d2cc082775418cdd19d593295fd28e92c410

--- a/openstack/oslotest/oslotest.spec.j2
+++ b/openstack/oslotest/oslotest.spec.j2
@@ -5,7 +5,7 @@ Summary:        OpenStack test framework
 License:        {{ 'Apache-2.0' | license }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/oslotest
-Source:         https://pypi.io/packages/source/o/oslotest/oslotest-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/o/oslotest/oslotest-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('debtcollector', (">=", "0.3.0")) }}
 BuildRequires:  {{ py2pkg('devel') }}
