Update oslosphinx to 4.5.0
Change-Id: Ie5f3f187b4cf6962ab8212e0828c98114e7c9004

--- a/openstack/oslosphinx/oslosphinx.spec.j2
+++ b/openstack/oslosphinx/oslosphinx.spec.j2
@@ -1,11 +1,11 @@
 Name:           {{ py2name('oslosphinx') }}
-Version:        4.3.0
+Version:        4.5.0
 Release:        0
 Summary:        OpenStack Sphinx
 License:        Apache-2.0
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/oslosphinx
-Source:         https://pypi.io/packages/source/o/oslosphinx/oslosphinx-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/o/oslosphinx/oslosphinx-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('pbr') }}
