--- a/openstack/oslo.utils/oslo.utils.spec.j2
+++ b/openstack/oslo.utils/oslo.utils.spec.j2
@@ -2,7 +2,7 @@
 Name:           {{ py2name('oslo.utils') }}
 Version:        3.14.0
 Release:        0
-Summary:        OpenStack utils library
+Summary:        OpenStack Utils Library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
