oslo.i18n: use %license macro
Change-Id: I31f359191877d0d847f5ad732429f2b9d9f8f6eb

--- a/openstack/oslo.i18n/oslo.i18n.spec.j2
+++ b/openstack/oslo.i18n/oslo.i18n.spec.j2
@@ -47,12 +47,13 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %{__python2} setup.py test
 
 %files
-%doc AUTHORS ChangeLog CONTRIBUTING.rst HACKING.rst LICENSE PKG-INFO README.rst
+%doc AUTHORS ChangeLog CONTRIBUTING.rst README.rst
+%license LICENSE
 %{python2_sitelib}/oslo_i18n
 %{python2_sitelib}/*.egg-info
 
 %files doc
 %doc doc/build/html
-%doc LICENSE
+%license LICENSE
 
 %changelog
