Use %py_build and %py_install macros
The macros where introduced recently so use them in all .spec.j2 templates.

Change-Id: I0cb651405f7ac59ab25e3bdbcd0a1ca9a5fdeebf

--- a/openstack/os-client-config/os-client-config.spec.j2
+++ b/openstack/os-client-config/os-client-config.spec.j2
@@ -55,7 +55,7 @@ Documentation for the os-client-config library.
 %setup -q -n %{sname}-%{version}
 
 %build
-%{__python2} setup.py build
+%{py2_build}
 %if %{with docs}
 # generate html docs
 %{__python2} setup.py build_sphinx
@@ -64,7 +64,7 @@ rm -rf html/.{doctrees,buildinfo}
 %endif
 
 %install
-%{__python2} setup.py install --skip-build --root %{buildroot}
+%{py2_install}
 
 %if %{with test}
 %check
