--- a/openstack/oslo.policy/oslo.policy.spec.j2
+++ b/openstack/oslo.policy/oslo.policy.spec.j2
@@ -43,7 +43,7 @@ Documentation for the Oslo Policy library.
 %setup -q -n %{sname}-%{version}
 
 %build
-%{__python2} setup.py build
+%{py2_build}
 
 # generate html docs
 %{__python2} setup.py build_sphinx
@@ -51,7 +51,7 @@ Documentation for the Oslo Policy library.
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %install
-%{__python2} setup.py install --skip-build --root %{buildroot}
+%{py2_install}
 
 %check
 %{__python2} setup.py testr
