--- a/openstack/bareon/Bareon.spec.j2
+++ b/openstack/bareon/Bareon.spec.j2
@@ -76,7 +76,7 @@ Documentation for OpenStack bareon tool.
 %setup  -q -n %{sname}-%{sversion}
 
 %build
-%{__python2} setup.py build
+%{py2_build}
 # generate html docs
 %{__python2} setup.py build_sphinx
 # remove the sphinx-build leftovers
@@ -84,7 +84,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 
 
 %install
-%{__python2} setup.py install --skip-build --root %{buildroot}
+%{py2_install}
 mkdir -p %{buildroot}/%{_sysconfdir}/bareon
 mkdir -p %{buildroot}%{_datadir}/%{sname}/cloud-init-templates
 install -p -D -m 640 etc/bareon/bareon.conf.sample %{buildroot}/%{_sysconfdir}/bareon/bareon.conf
