--- a/openstack/os-testr/os-testr.spec.j2
+++ b/openstack/os-testr/os-testr.spec.j2
@@ -40,7 +40,7 @@ Documentation for the testr wrapper.
 %setup -q -n %{sname}-%{version}
 
 %build
-%{__python2} setup.py build
+%{py2_build}
 
 # generate html docs
 %{__python2} setup.py build_sphinx
@@ -48,7 +48,7 @@ Documentation for the testr wrapper.
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %install
-%{__python2} setup.py install --prefix=%{_prefix} --root=%{buildroot}
+%{py2_install}
 
 
 %check
