--- a/openstack/os-win/os-win.spec.j2
+++ b/openstack/os-win/os-win.spec.j2
@@ -53,12 +53,12 @@ Documentation for the Hyper-V library.
 %setup -q -n %{sname}-%{version}
 
 %build
-%{__python2} setup.py build
+%{py2_build}
 %{__python2} setup.py build_sphinx
 rm -rf html/.{doctrees,buildinfo}
 
 %install
-%{__python2}  setup.py install --prefix=%{_prefix} --root=%{buildroot}
+%{py2_install}
 install -p -D -m 644 doc/build/man/os-win.1 %{buildroot}/%{_mandir}/man1/os-win.1
 
 %check
