--- a/openstack/oslo.concurrency/oslo.concurrency.spec.j2
+++ b/openstack/oslo.concurrency/oslo.concurrency.spec.j2
@@ -53,7 +53,7 @@ This package contains the documentation.
 %setup -q -n %{sname}-%{version}
 
 %build
-%{__python2} setup.py build
+%{py2_build}
 
 # generate html docs
 %{__python2} setup.py build_sphinx
@@ -61,7 +61,7 @@ This package contains the documentation.
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %install
-%{__python2}  setup.py install --prefix=%{_prefix} --root=%{buildroot}
+%{py2_install}
 
 %check
 # Test suite fails on 32 bit platforms
