--- a/openstack/osprofiler/osprofiler.spec.j2
+++ b/openstack/osprofiler/osprofiler.spec.j2
@@ -43,10 +43,10 @@ Documentation for OSProfiler.
 %setup -q -n %{sname}-%{version}
 
 %build
-%{__python2} setup.py build
+%{py2_build}
 
 %install
-%{__python2} setup.py install --skip-build --root %{buildroot}
+%{py2_install}
 
 # generate html docs
 %{__python2} setup.py build_sphinx
