Remove harcoded requirements min versions
Change-Id: Ia7b4b49f5db094a6c01200278793c182c8dfd5fd

--- a/openstack/oslosphinx/oslosphinx.spec.j2
+++ b/openstack/oslosphinx/oslosphinx.spec.j2
@@ -10,9 +10,9 @@ BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
-Requires:       {{ py2pkg('pbr', (">=", "1.8")) }}
-Requires:       {{ py2pkg('requests', (">=", "2.8.1")) }}
-Requires:       {{ py2pkg('six', (">=", "1.9.0")) }}
+Requires:       {{ py2pkg('pbr') }}
+Requires:       {{ py2pkg('requests') }}
+Requires:       {{ py2pkg('six') }}
 BuildArch:      noarch
 
 %description
