Update oslo.rootwrap to version 4.4.0
- Use pypi.io as Source0 url.

Change-Id: Ic90ae89ba19a68c8a29dfc75b1d47feb430e9a63

--- a/openstack/oslo.rootwrap/oslo.rootwrap.spec.j2
+++ b/openstack/oslo.rootwrap/oslo.rootwrap.spec.j2
@@ -1,12 +1,12 @@
 %global sname oslo.rootwrap
 Name:           {{ py2name('oslo.rootwrap') }}
-Version:        4.2.0
+Version:        4.4.0
 Release:        0
 Summary:        Filtering shell commands to run as root from OpenStack services
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
-Source0:        https://pypi.python.org/packages/c8/5c/fc9b0a988d31083998af78fde9c5d73897c9a4a0a9fce167fcf96261643c/%{sname}-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  python-devel
 BuildRequires:  {{ py2pkg('eventlet') }}
