--- a/openstack/oslotest/oslotest.spec.j2
+++ b/openstack/oslotest/oslotest.spec.j2
@@ -13,7 +13,7 @@
 
 
 Name:           {{ py2name('oslotest') }}
-Version:        2.0.0
+Version:        2.4.0
 Release:        0
 Summary:        OpenStack test framework
 License:        {{ 'Apache-2.0' | license }}
@@ -23,24 +23,24 @@ BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 # Test requirements:
-BuildRequires:  {{ py2pkg('debtcollector', (">=", "0.3.0")) }}
-BuildRequires:  {{ py2pkg('fixtures', (">=", "0.3.14")) }}
-BuildRequires:  {{ py2pkg('mock', (">=", "1.0")) }}
-BuildRequires:  {{ py2pkg('mox3', (">=", "0.7.0")) }}
-BuildRequires:  {{ py2pkg('python-subunit', (">=", "0.0.18")) }}
+BuildRequires:  {{ py2pkg('debtcollector') }}
+BuildRequires:  {{ py2pkg('fixtures') }}
+BuildRequires:  {{ py2pkg('mock') }}
+BuildRequires:  {{ py2pkg('mox3') }}
+BuildRequires:  {{ py2pkg('python-subunit') }}
 BuildRequires:  {{ py2pkg('six') }}
-BuildRequires:  {{ py2pkg('testrepository', (">=", "0.0.18")) }}
-BuildRequires:  {{ py2pkg('testscenarios', (">=", "0.4")) }}
-BuildRequires:  {{ py2pkg('testtools', (">=", "1.4.0")) }}
-Requires:       {{ py2pkg('fixtures', (">=", "1.3.1")) }}
-Requires:       {{ py2pkg('mock', (">=", "1.0.1")) }}
-Requires:       {{ py2pkg('mox3', (">=", "0.7.0")) }}
-Requires:       {{ py2pkg('os-client-config', (">=", "1.4.0")) }}
-Requires:       {{ py2pkg('python-subunit', (">=", "0.0.18")) }}
-Requires:       {{ py2pkg('six', (">=", "1.9.0")) }}
-Requires:       {{ py2pkg('testrepository', (">=", "0.0.18")) }}
-Requires:       {{ py2pkg('testscenarios', (">=", "0.4")) }}
-Requires:       {{ py2pkg('testtools', (">=", "1.4.0")) }}
+BuildRequires:  {{ py2pkg('testrepository') }}
+BuildRequires:  {{ py2pkg('testscenarios') }}
+BuildRequires:  {{ py2pkg('testtools') }}
+Requires:       {{ py2pkg('fixtures') }}
+Requires:       {{ py2pkg('mock') }}
+Requires:       {{ py2pkg('mox3') }}
+Requires:       {{ py2pkg('os-client-config') }}
+Requires:       {{ py2pkg('python-subunit') }}
+Requires:       {{ py2pkg('six') }}
+Requires:       {{ py2pkg('testrepository') }}
+Requires:       {{ py2pkg('testscenarios') }}
+Requires:       {{ py2pkg('testtools') }}
 BuildArch:      noarch
 
 %description
