Use pypi.io url as Source Url
Change-Id: Iadcda9b96196b1e5909cc36725e9357096daa78b

--- a/openstack/os-testr/os-testr.spec.j2
+++ b/openstack/os-testr/os-testr.spec.j2
@@ -6,7 +6,7 @@ Summary:        A testr wrapper to provide functionality for OpenStack projects
 License:        {{ 'Apache-2.0' | license }}
 Group:          Development/Languages/Python
 Url:            http://www.openstack.org/
-Source:         https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  python-devel
 BuildRequires:  {{ py2pkg('ddt', ('>=', '0.4.0')) }}
