--- a/openstack/oslo.cache/oslo.cache.spec.j2
+++ b/openstack/oslo.cache/oslo.cache.spec.j2
@@ -7,7 +7,7 @@ Summary:        Cache storage for Openstack projects
 License:        {{ 'Apache-2.0' | license }}
 Group:          Development/Languages/Python
 URL:            http://launchpad.net/oslo
-Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('dogpile.cache', ('>=', '0.5.7')) }}
