--- a/openstack/oslo.config/oslo.config.spec.j2
+++ b/openstack/oslo.config/oslo.config.spec.j2
@@ -7,7 +7,7 @@ Summary:       OpenStack common configuration library
 Group:         Development/Languages
 License:       {{ 'Apache-2.0' | license }}
 Url:           https://launchpad.net/%{sname}
-Source0:       https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Source0:       https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires: openstack-macros
 BuildRequires: python-devel
 BuildRequires: {{ py2pkg('debtcollector', ('>=', '1.2.0')) }}
