--- a/openstack/oslo.log/oslo.log.spec.j2
+++ b/openstack/oslo.log/oslo.log.spec.j2
@@ -7,7 +7,7 @@ Summary:        OpenStack log library
 License:        {{ 'Apache-2.0' | license }}
 Group:          Development/Languages/Python
 URL:            https://launchpad.net/%{sname}
-Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  python-devel
 BuildRequires:  {{ py2pkg('pyinotify', ('>=', '0.9.6')) }}
