--- a/openstack/oslo.utils/oslo.utils.spec.j2
+++ b/openstack/oslo.utils/oslo.utils.spec.j2
@@ -7,7 +7,7 @@ Summary:        OpenStack utils library
 License:        {{ 'Apache-2.0' | license }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
-Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Babel') }}
 BuildRequires:  {{ py2pkg('debtcollector') }}
