--- a/openstack/oslosphinx/oslosphinx.spec.j2
+++ b/openstack/oslosphinx/oslosphinx.spec.j2
@@ -23,7 +23,7 @@ Url:            https://launchpad.net/oslosphinx
 Summary:        OpenStack Sphinx
 License:        Apache-2.0
 Group:          Development/Languages/Python
-Source:         https://pypi.python.org/packages/source/o/oslosphinx/oslosphinx-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/o/oslosphinx/oslosphinx-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('pbr') }}
