--- a/openstack/oslo.policy/oslo.policy.spec.j2
+++ b/openstack/oslo.policy/oslo.policy.spec.j2
@@ -6,7 +6,7 @@ Release:        0
 Summary:        OpenStack Oslo Policy library
 License:        {{ 'Apache-2.0' | license }}
 URL:            https://launchpad.net/%sname
-Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('oslo.config', ('>=', '3.4.0')) }}
