--- a/openstack/oslo.log/oslo.log.spec.j2
+++ b/openstack/oslo.log/oslo.log.spec.j2
@@ -1,7 +1,7 @@
 %global sname oslo.log
 
 Name:           {{ py2name('oslo.log') }}
-Version:        3.2.0
+Version:        3.3.0
 Release:        0
 Summary:        OpenStack log library
 License:        {{ 'Apache-2.0' | license }}
@@ -10,32 +10,32 @@ Source0:        https://pypi.python.org/packages/source/o/%{sname}/%{sname}-%{ve
 
 BuildRequires:  openstack-macros
 BuildRequires:  python-devel
-BuildRequires:  {{ py2pkg('pyinotify', ('>=', '0.9.6')) }}
-BuildRequires:  {{ py2pkg('mock', ('>=', '1.2')) }}
-BuildRequires:  {{ py2pkg('oslo.config', ('>=', '3.4.0')) }}
-BuildRequires:  {{ py2pkg('oslo.context', ('>=', '0.2.0')) }}
-BuildRequires:  {{ py2pkg('oslo.i18n', ('>=', '2.1.0')) }}
-BuildRequires:  {{ py2pkg('oslo.serialization', ('>=', '1.10.0')) }}
-BuildRequires:  {{ py2pkg('oslo.utils', ('>=', '3.5.0')) }}
-BuildRequires:  {{ py2pkg('oslotest', ('>=', '1.10.0')) }}
-BuildRequires:  {{ py2pkg('pbr', ('>=', '1.6')) }}
-BuildRequires:  {{ py2pkg('python-dateutil', ('>=', '2.4.2')) }}
-BuildRequires:  {{ py2pkg('python-subunit', ('>=', '0.0.18')) }}
+BuildRequires:  {{ py2pkg('pyinotify') }}
+BuildRequires:  {{ py2pkg('mock') }}
+BuildRequires:  {{ py2pkg('oslo.config') }}
+BuildRequires:  {{ py2pkg('oslo.context') }}
+BuildRequires:  {{ py2pkg('oslo.i18n') }}
+BuildRequires:  {{ py2pkg('oslo.serialization') }}
+BuildRequires:  {{ py2pkg('oslo.utils') }}
+BuildRequires:  {{ py2pkg('oslotest') }}
+BuildRequires:  {{ py2pkg('pbr') }}
+BuildRequires:  {{ py2pkg('python-dateutil') }}
+BuildRequires:  {{ py2pkg('python-subunit') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
-BuildRequires:  {{ py2pkg('six', ('>=', '1.9.0')) }}
-BuildRequires:  {{ py2pkg('testrepository', ('>=', '0.0.18')) }}
-BuildRequires:  {{ py2pkg('testscenarios', ('>=', '0.4')) }}
-BuildRequires:  {{ py2pkg('testtools', ('>=', '1.4.0')) }}
-Requires:       {{ py2pkg('Babel', ('>=', '1.3')) }}
-Requires:       {{ py2pkg('debtcollector', ('>=', '1.2.0')) }}
-Requires:       {{ py2pkg('oslo.config', ('>=', '3.4.0')) }}
-Requires:       {{ py2pkg('oslo.context', ('>=', '0.2.0')) }}
-Requires:       {{ py2pkg('oslo.i18n', ('>=', '2.1.0')) }}
-Requires:       {{ py2pkg('oslo.serialization', ('>=', '1.10.0')) }}
-Requires:       {{ py2pkg('oslo.utils', ('>=', '3.5.0')) }}
-Requires:       {{ py2pkg('pyinotify', ('>=', '0.9.6')) }}
-Requires:       {{ py2pkg('python-dateutil', ('>=', '2.4.2')) }}
-Requires:       {{ py2pkg('six', ('>=', '1.9.0')) }}
+BuildRequires:  {{ py2pkg('six') }}
+BuildRequires:  {{ py2pkg('testrepository') }}
+BuildRequires:  {{ py2pkg('testscenarios') }}
+BuildRequires:  {{ py2pkg('testtools') }}
+Requires:       {{ py2pkg('Babel') }}
+Requires:       {{ py2pkg('debtcollector') }}
+Requires:       {{ py2pkg('oslo.config') }}
+Requires:       {{ py2pkg('oslo.context') }}
+Requires:       {{ py2pkg('oslo.i18n') }}
+Requires:       {{ py2pkg('oslo.serialization') }}
+Requires:       {{ py2pkg('oslo.utils') }}
+Requires:       {{ py2pkg('pyinotify') }}
+Requires:       {{ py2pkg('python-dateutil') }}
+Requires:       {{ py2pkg('six') }}
 BuildArch:      noarch
 
 %description
@@ -45,8 +45,8 @@ support for context specific logging (like resource id's etc).
 
 %package doc
 Summary:    Documentation for OpenStack log library
-BuildRequires: {{ py2pkg('Sphinx', ('>=', '1.1.2')) }}
-BuildRequires: {{ py2pkg('oslosphinx', ('>=', '2.5.0')) }}
+BuildRequires: {{ py2pkg('Sphinx') }}
+BuildRequires: {{ py2pkg('oslosphinx') }}
 
 %description doc
 Documentation for the oslo.log library.
