Include openstack-macros for build
Change-Id: I50839f77714e96854aa0a69f9e4bf1a820346007

--- a/openstack/python-ceilometerclient/python-ceilometerclient.spec.j2
+++ b/openstack/python-ceilometerclient/python-ceilometerclient.spec.j2
@@ -7,6 +7,7 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages
 Url:            https://github.com/openstack/%{name}
 Source0:        https://pypi.io/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
+BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PrettyTable') }}
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('python-keystoneclient') }}
