--- a/openstack/keystoneauth1/keystoneauth1.spec.j2
+++ b/openstack/keystoneauth1/keystoneauth1.spec.j2
@@ -1,6 +1,6 @@
 %global sname keystoneauth1
 Name:           {{ py2name('keystoneauth1') }}
-Version:        2.9.0
+Version:        2.10.0
 Release:        0
 Summary:        OpenStack authenticating tools
 License:        {{ license('Apache-2.0') }}
@@ -8,6 +8,7 @@ Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/k/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
+BuildRequires:  {{ py2pkg('PyYAML') }}
 BuildRequires:  {{ py2pkg('betamax') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
 BuildRequires:  {{ py2pkg('iso8601') }}
@@ -27,6 +28,7 @@ BuildRequires:  {{ py2pkg('requests-mock') }}
 BuildRequires:  {{ py2pkg('testrepository') }}
 BuildRequires:  {{ py2pkg('testresources') }}
 BuildRequires:  {{ py2pkg('testtools') }}
+Requires:       {{ py2pkg('PyYAML') }}
 Requires:       {{ py2pkg('iso8601') }}
 Requires:       {{ py2pkg('lxml') }}
 Requires:       {{ py2pkg('oauthlib') }}
