Consistently use Source0: instead of Source: in specs
For consistency (and to simplify DLRN support), let's use the Source0
tag in all spec files.

Change-Id: I457f994c3c7179a118aa16c6e76d57d4afedcbcd

--- a/openstack/openstacksdk/openstacksdk.spec.j2
+++ b/openstack/openstacksdk/openstacksdk.spec.j2
@@ -6,7 +6,7 @@ Summary:        An SDK for building applications to work with OpenStack
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
-Source:         https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('pbr') }}
