--- a/openstack/tempest-lib/tempest-lib.spec.j2
+++ b/openstack/tempest-lib/tempest-lib.spec.j2
@@ -5,7 +5,7 @@ Summary:        OpenStack Functional Testing Library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http://www.openstack.org/
-Source:         https://pypi.io/packages/source/t/tempest-lib/tempest-lib-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/t/tempest-lib/tempest-lib-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('ddt') }}
 BuildRequires:  {{ py2pkg('devel') }}
