--- a/openstack/cliff/cliff.spec.j2
+++ b/openstack/cliff/cliff.spec.j2
@@ -6,7 +6,7 @@ Summary:        Command Line Interface Formulation Framework
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/python-%{sname}
-Source:         https://pypi.io/packages/source/c/cliff/%{sname}-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/c/cliff/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('pbr') }}
