--- a/openstack/openstackdocstheme/openstackdocstheme.spec.j2
+++ b/openstack/openstackdocstheme/openstackdocstheme.spec.j2
@@ -6,7 +6,7 @@ Summary:        OpenStack Docs Theme
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
-Source:         https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('devel') }}
