--- a/openstack/os-brick/os-brick.spec.j2
+++ b/openstack/os-brick/os-brick.spec.j2
@@ -1,6 +1,6 @@
 %global sname os-brick
 Name:           {{ py2name('os-brick') }}
-Version:        1.4.0
+Version:        1.5.0
 Release:        0
 Summary:        OpenStack Cinder brick library for managing local volume attaches
 License:        {{ license('Apache-2.0') }}
@@ -10,9 +10,11 @@ Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.t
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Babel') }}
 BuildRequires:  {{ py2pkg('castellan') }}
+BuildRequires:  {{ py2pkg('ddt') }}
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('eventlet') }}
 BuildRequires:  {{ py2pkg('os-testr') }}
+BuildRequires:  {{ py2pkg('os-win') }}
 BuildRequires:  {{ py2pkg('oslo.concurrency') }}
 BuildRequires:  {{ py2pkg('oslo.i18n') }}
 BuildRequires:  {{ py2pkg('oslo.log') }}
@@ -33,6 +35,7 @@ BuildRequires:  {{ py2pkg('testtools') }}
 Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('castellan') }}
 Requires:       {{ py2pkg('eventlet') }}
+Requires:       {{ py2pkg('os-win') }}
 Requires:       {{ py2pkg('oslo.concurrency') }}
 Requires:       {{ py2pkg('oslo.i18n') }}
 Requires:       {{ py2pkg('oslo.log') }}
