--- a/openstack/openstackdocstheme/openstackdocstheme.spec.j2
+++ b/openstack/openstackdocstheme/openstackdocstheme.spec.j2
@@ -1,6 +1,6 @@
 %global sname openstackdocstheme
 Name:           {{ py2name('openstackdocstheme') }}
-Version:        1.3.0
+Version:        1.4.0
 Release:        0
 Summary:        OpenStack Docs Theme
 License:        {{ license('Apache-2.0') }}
@@ -37,7 +37,7 @@ to docs.openstack.org. Intended for use by OpenStack projects.
 
 %files
 %license LICENSE
-%doc RELEASENOTES.rst README.rst
+%doc README.rst
 %{python2_sitelib}/%{sname}
 %{python2_sitelib}/*.egg-info
 
