Add lxml as build requirement for keystoneauth1
It's used during the %check phase.

Change-Id: If7bdc7817143c926ef6d4085e805fb382c841f9b

--- a/openstack/keystoneauth1/keystoneauth1.spec.j2
+++ b/openstack/keystoneauth1/keystoneauth1.spec.j2
@@ -12,6 +12,7 @@ BuildRequires:  {{ py2pkg('PyYAML') }}
 BuildRequires:  {{ py2pkg('betamax') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
 BuildRequires:  {{ py2pkg('iso8601') }}
+BuildRequires:  {{ py2pkg('lxml') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('oauthlib') }}
 BuildRequires:  {{ py2pkg('os-testr') }}
